2010-07-09  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed issue: #14314: beLayout does not work with Static Data Structures in Extensions 
	* Fixed issue: #15675: pagemodule resource "API" behaves inconsistent

2010-07-05  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed issue: #14386: Static DS - Centralize access to datastructure / pt.4 - mod2 uses proper objects now

2010-09-01  Tolleiv Nietsch <nietsch@aoemedia.de>

	* Fixed issue: #15614: Element warnings are inconsistent and lack information

2010-08-31  Tolleiv Nietsch <nietsch@aoemedia.de>

	* Fixed bug: #3813: Localization is not respected when migrating a traditional site using the "Functions" module (Thanks to Bernhard Kraft)

2010-08-30  Tolleiv Nietsch <nietsch@aoemedia.de>

	* Follow-up to: #15210: TemplaVoila should adjust it's look&feel to TYPO3 4.4 - special page padding fixed
	* Fixed issue: #15411: Unmapped Elements of etype 'ce' / 'no_map' don't show in TV BE page module (Thanks to Marcel Greter)
	* Fixed issue: #15568: Hardcoded added TS snipped crashes output

2010-08-09  Tolleiv Nietsch <nietsch@aoemedia.de>

	* Follow-up to: #15210: TemplaVoila should adjust it's look&feel to TYPO3 4.4 - usability adjustments

2010-08-06  Tolleiv Nietsch <nietsch@aoemedia.de>

	* Follow-up to: #14386: Static DS - Centralize access to datastructure / pt.1  - FE crash case removed

2010-08-04  Tolleiv Nietsch <nietsch@aoemedia.de>

	* Fixed issue: #15358: pagemodule ce title len limit should be configurable
	* Fixed issue: #15357: pagemodule preview data limit should be configurable 

2010-08-03  Tolleiv Nietsch <nietsch@aoemedia.de>

	* Follow-up to: #14140: TemplaVoila should use sprite icons / pt.3
	* Follow-up to: #15217: new content wizard should use docHeader

2010-07-30  Tolleiv Nietsch <nietsch@aoemedia.de>

	* Fixed issue: #14590: use pagerenderer to output / integrate the header parts into the regular TYPO3 output