@@ -25,7 +25,7 @@
 
 require_once(t3lib_extMgm::extPath('templavoila') . 'classes/preview/class.tx_templavoila_preview_type_text.php');
 
-class tx_templavoila_preview_type_multimedia extends tx_templavoila_preview_type_text {
+class tx_templavoila_preview_type_multimedia extends tx_templavoila_preview_type_uploads {
 
 	protected $previewField = 'multimedia';
 
