@@ -29,6 +29,15 @@ class tx_templavoila_preview_type_uploads extends tx_templavoila_preview_type_te
 
 	protected $previewField = 'media';
 
+	/**
+	 *
+	 * @param array $row
+	 * @return string
+	 */
+	protected function getPreviewData($row) {
+		$data = $this->preparePreviewData($row[$this->previewField]);
+		return str_replace (',', '<br />', $data);
+	}
 }
 
 if (defined('TYPO3_MODE') && $TYPO3_CONF_VARS[TYPO3_MODE]['XCLASS']['ext/templavoila/classes/preview/class.tx_templavoila_preview_type_uploads.php'])    {
